fix: alignment issue

--- a/studyBuffUI/src/StartPage/Start.css
+++ b/studyBuffUI/src/StartPage/Start.css
@@ -100,14 +100,14 @@
 
 .team{
     position: absolute;
-    top: 75%;
+    top: 65%;
     left: 20%;
 }
 
 .start-button {
     position: absolute;
-    top: 65%;
-    left: 60%;
+    top: 55%;
+    left: 50%;
     width: 30%;
     background-color: #ffffff;
     color: #070f2d;
